# odinsan

./: CMakeLists.txt  README.md  conanfile.txt
assets/: MacOSXBundleInfo.plist.in
src/: Queue.cpp  main.cpp  stream_server.cpp  test_client.cpp  video_reader.cpp  video_reader.hpp
